fix horizontal scrollbar

--- a/css/main.less
+++ b/css/main.less
@@ -73,6 +73,10 @@ body, blockquote p, .tooltip-inner {
 	&.front {
 		display: block;
 	}
+
+	.content {
+		overflow-x: hidden;
+	}
 }
 
 
